--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="paginas-sites/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Logo da Home"></a>
             <a href="paginas-sites/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a>
             <a href="paginas-sites/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
+            <a href="paginas-sites/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a>
         </section>
     </main>
 </body>
